<resources>
    <string name="app_name">Group14_HW1</string>
    <string name="clear">Clear</string>
    <string name="enter_bill_total">Enter Bill Total</string>
    <string name="bill_total">Bill Total:</string>
    <string name="split_by">Split By:</string>
    <string name="tip">Tip:</string>
    <string name="total_person">Total/Person:</string>
    <string name="total">Total:</string>
    <string name="custom">Custom:</string>
    <string name="four">Four</string>
    <string name="tipRadButton">Tip %:</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="customTextBox">Custom</string>
    <string name="_18">18%</string>
    <string name="_15">15%</string>
    <string name="_10">10%</string>
    <string name="enter_bill">Enter Bill Total</string>
    <string name="defaultTipVal">$0.0</string>
    <string name="defaultTotalVal">$0.0</string>
    <string name="fortyPercent">40%</string>
</resources>