<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnClear"
        android:layout_width="289dp"
        android:layout_height="58dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/clear"
        android:textColor="#000000"
        app:backgroundTint="#A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerson" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="7dp"
        android:text="@string/bill_total"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="33dp"
        android:text="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTip" />

    <TextView
        android:id="@+id/textViewPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="373dp"
        android:layout_marginRight="373dp"
        android:text="@string/total_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"
        android:text="@string/split_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="38dp"
        android:text="@string/tipRadButton"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="36dp"
        android:text="@string/custom"
        app:layout_constraintBottom_toTopOf="@+id/textViewTip"
        app:layout_constraintEnd_toStartOf="@+id/customTipBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="21dp"
        android:checkedButton="@id/rad10"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rad10"
            android:layout_width="74dp"
            android:layout_height="48dp"
            android:text="@string/_10"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rad15"
            android:layout_width="81dp"
            android:layout_height="48dp"
            android:text="@string/_15"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rad18"
            android:layout_width="71dp"
            android:layout_height="48dp"
            android:text="@string/_18"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radCustom"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:text="@string/customTextBox"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/customTipBar"
        android:layout_width="261dp"
        android:layout_height="22dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="127dp"
        android:max="50"
        android:progress="40"
        app:layout_constraintBottom_toTopOf="@+id/splitPersonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="306dp"
        android:layout_marginRight="306dp"
        android:text="@string/defaultTipVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewTip"
        app:layout_constraintTop_toBottomOf="@+id/customTipBar" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="306dp"
        android:layout_marginRight="306dp"
        android:layout_marginBottom="29dp"
        android:text="@string/defaultTotalVal"
        app:layout_constraintBottom_toTopOf="@+id/splitPersonGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <TextView
        android:id="@+id/txtTotalPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:text="@string/defaultTotalVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPerson"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/splitPersonGroup"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:checkedButton="@id/radOne"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/customTipBar">

        <RadioButton
            android:id="@+id/radOne"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/radTwo"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radThree"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radFour"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:text="@string/four" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtEnterBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/enter_bill"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/fortyPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toEndOf="@+id/customTipBar"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>